Name:            rpl
Version:         0.1
License:         BSD3
License-File:    LICENSE
Author:          Thomas Schilling <nominolo@googlemail.com>
Maintainer:      Thomas Schilling <nominolo@googlemail.com>
Homepage:        http://github.com/nominolo/rpl
Description:     The Round Pie-in-the-Sky Language.
Synopsis:        The Round Pie Language.
Category:        Language
Stability:       provisional
Build-Type:      Simple
Cabal-Version:   >= 1.4
Extra-Source-Files: README.markdown

Library
  Build-Depends:              QuickCheck      == 2.*,
                              base            == 4.*,
                              pretty          == 1.0.*,
                              array           == 0.2.*,
                              utf8-string     == 0.3.*,
                              bytestring      == 0.9.*,
                              containers      == 0.2.*
  Hs-Source-Dirs:             src
  Exposed-Modules:            
                              RPL.Error
                              RPL.Lexer
                              RPL.Parser
                              RPL.Syntax
                              RPL.Type
                              RPL.Typecheck.Monad
                              RPL.Typecheck.Subst
                              RPL.Typecheck.AlgorithmW
                              RPL.Typecheck.InferHMX
                              RPL.Utils.Monads
                              RPL.Utils.Panic
                              RPL.Utils.Pretty
                              RPL.Utils.SrcLoc
                              RPL.Utils.Unique

Executable rplc
  Hs-Source-Dirs:             src
  Other-Modules:              RPL.Syntax
                              RPL.Lexer
                              RPL.Parser
                              RPL.Type
                              RPL.Typecheck.Monad
                              RPL.Typecheck.Subst
                              RPL.Typecheck.AlgorithmW
                              RPL.Typecheck.InferHMX
                              RPL.Utils.Monads
                              RPL.Utils.SrcLoc
                              RPL.Utils.Pretty
                              RPL.Utils.Unique
  Main-Is:                    Main.hs

Executable testsuite
  Hs-Source-Dirs:             src
  Main-Is:                    RPL/Test/Main.hs
  Other-Modules:              RPL.Syntax
                              RPL.Lexer
                              RPL.Error
                              RPL.Test.Utils
                              RPL.Test.Lexer

  Build-Depends:              QuickCheck      == 2.*,
                              base            == 4.*,
                              pretty          == 1.0.*,
                              array           == 0.2.*,
                              utf8-string     == 0.3.*,
                              bytestring      == 0.9.*,
                              containers      == 0.2.*,
                              test-framework  == 0.2.*,
                              test-framework-hunit       == 0.2.*,
                              test-framework-quickcheck2 == 0.2.*,
                              HUnit           == 1.2.*
