Name:            rpl-testsuite
Version:         0.1
License:         BSD3
License-File:    ../LICENSE
Author:          Thomas Schilling <nominolo@googlemail.com>
Maintainer:      Thomas Schilling <nominolo@googlemail.com>
Homepage:        http://github.com/nominolo/rpl
Description:     The Round Pie-in-the-Sky Language Compiler
Synopsis:        The Round Pie Language.
Category:        Language
Stability:       provisional
Build-Type:      Simple
Cabal-Version:   >= 1.4
Extra-Source-Files: README.markdown

Executable rpl-testsuite
  Build-Depends:              QuickCheck      == 2.*,
                              base            == 4.*,
                              pretty          == 1.0.*,
                              array           == 0.2.*,
                              utf8-string     == 0.3.*,
                              bytestring      == 0.9.*,
                              containers      == 0.2.*,
                              rpl             == 0.1.*,
                              value-supply    == 0.5.*,
                              test-framework  == 0.2.*,
                              test-framework-hunit       == 0.2.*,
                              test-framework-quickcheck2 == 0.2.*,
                              HUnit           == 1.2.*

  GHC-Options:                -Wall
  main-is:                    RPL/Test/Main.hs
  Other-Modules:              RPL.Test.Lexer,
                              RPL.Test.TestUtils
